Fix spacing bug in course list

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -181,7 +181,7 @@ textarea[type=text]:focus {
   background-color: #F4F4F4;
   -webkit-box-shadow: -1px 5px 9px 5px rgba(0, 0, 0, 0.2);
           box-shadow: -1px 5px 9px 5px rgba(0, 0, 0, 0.2);
-  padding: 0;
+  padding: 20px;
 }
 
 .theme-main .panel .panel__img {
@@ -287,6 +287,7 @@ textarea[type=text]:focus {
 
 .galleryCard {
   height: 65vw;
+  padding: 0;
 }
 
 .editButton {
