--- a/resources/src/sass/_helpers.scss
+++ b/resources/src/sass/_helpers.scss
@@ -74,6 +74,7 @@
 
 .galleryCard {
   height: 65vw;
+  padding: 0;
 }
 
 .editButton {
